@@ -407,20 +407,34 @@ class PhpThumbsUp {
         return true;
     }
 
+    /***
+     * @param $file
+     * @return string
+     */
+    protected function get_mime_type($file){
+        if (function_exists('finfo_file')){
+            $finfo = finfo_open(FILEINFO_MIME_TYPE);
+            $mime = finfo_file($finfo, $file);
+            finfo_close($finfo);
+        } else if (function_exists('exif_imagetype')) {
+            $mime = image_type_to_mime_type(exif_imagetype($file));
+        } else {
+            $type = getimagesize($file);
+            $mime = image_type_to_mime_type($type[2]);
+        }
+        return $mime;
+    }
 
     /**
      * Displays the thumbnail provided.
      *
-     * @param $file absolute path to the thumbnail
+     * @param string $file absolute path to the thumbnail
      */
     protected function display($file) {
-        $finfo = finfo_open(FILEINFO_MIME_TYPE);
-        $mime = finfo_file($finfo, $file);
-        finfo_close($finfo);
-
+        $mime = $this->get_mime_type($file);
         $etag = md5_file($file);
         $mtime = filemtime($file);
-        $last_modified = gmstrftime('%a, %d %b %Y %T %Z', $mtime);
+        $last_modified = gmstrftime('%a, %d %b %Y %H:%M:%S %Z', $mtime);
         if (@strtotime($this->get_server_var('HTTP_IF_MODIFIED_SINCE')) == $mtime || $this->get_server_var('HTTP_IF_NONE_MATCH') == $etag) {
             header($_SERVER['SERVER_PROTOCOL'] . ' 304 Not Modified');
             return;
@@ -464,7 +478,7 @@ class PhpThumbsUp {
     /**
      * Returns the value of a $_SERVER variable
      *
-     * @param $name name of the $_SERVER variable
+     * @param string $name name of the $_SERVER variable
      * @param bool $default returned if the variable is not set
      * @return bool|string the value of the variable
      */
